--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <div class="navbar-fixed">
-  <nav class="grey darken-3">
+  <nav style='background: url("/images/sprites.png") repeat-x 0 100%;margin: 15px 0 25px;padding: 0 0 8px'>
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center">
 
