--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,2 @@
-<div class="footer-copyright grey darken-3">
-  <div class="container">
-    FAI is free software, distributed under the terms of the GNU GPL, version 2 or any later version.
-  </div>
+<div class="footer" style='background: url("/images/body_bg.gif") repeat-x 0 100%;min-height: 50px'>
 </div>
