make footer white, because we ow use a sprite

--- a/contact/index.html
+++ b/contact/index.html
@@ -66,7 +66,7 @@ you. Just ask via email for more information.
 
 </main>
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
