--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -150,7 +150,7 @@ dd if=faicd64-large_5.10.3.iso of=/dev/sdx
       </div>
     </main>
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
