--- a/sources/index.html
+++ b/sources/index.html
@@ -80,7 +80,7 @@
 
     </main>
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
