--- a/talks/index.html
+++ b/talks/index.html
@@ -172,7 +172,7 @@ Mon, 12 Aug 2019 10:17:21 +0200
 
     </main>
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
