--- a/team/index.html
+++ b/team/index.html
@@ -53,7 +53,7 @@ Sat, 15 Oct 2022 22:57:15 +0200
 
     </main>
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
