--- a/cluster/index.html
+++ b/cluster/index.html
@@ -108,7 +108,7 @@ Tue, 29 Oct 2019 13:38:54 +0100
 
     </main>
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
