--- a/download/index.html
+++ b/download/index.html
@@ -96,7 +96,7 @@ or Rocky Linux or cross architecture installations</li>
 
 
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
