--- a/features/index.html
+++ b/features/index.html
@@ -177,7 +177,7 @@
       </div>
     </main>
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
