--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.h
 
     </main>
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
