--- a/mailinglist/index.html
+++ b/mailinglist/index.html
@@ -88,7 +88,7 @@
 
   </main>
 
-  <footer class="page-footer grey darken-3">
+  <footer class="page-footer white">
     <!--#include virtual="/footer.html" -->
   </footer>
   <!--JavaScript at end of body for optimized loading-->
