--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -405,7 +405,7 @@ Tue, 29 Oct 2019 13:39:44 +0100
 
     </main>
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
