--- a/reports/index.html
+++ b/reports/index.html
@@ -10287,7 +10287,7 @@ install and an immediate upgrade to Woody on install clients.
 
 </main>
 
-<footer class="page-footer grey darken-3">
+<footer class="page-footer white">
 <!--#include virtual="/footer.html" -->
 </footer>
 <!--JavaScript at end of body for optimized loading-->
