--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -65,7 +65,7 @@ classes, date of last fai action
 
     </main>
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer white">
       <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
