move sidenav down

--- a/header.html
+++ b/header.html
@@ -22,7 +22,7 @@
   </nav>
 </div>
 
-<ul class="sidenav sidenav-fixed" id="sidenav">
+<ul class="sidenav sidenav-fixed" id="sidenav" style="top: 85px">
 
   <li>
     <ul class="collapsible">
