--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container">
         <!-- Orange header bar -->
         <div class="row">
-          <div class="col s12 z-depth-3 center orange">
+          <div class="col s12 z-depth-3 center orange" style="margin-top: 23px">
             <h6>
               Motto: Plan your installation, and FAI installs your plan.</h6>
           </div>
