move talks and videos upwards

--- a/guide/index.html
+++ b/guide/index.html
@@ -80,6 +80,14 @@
 
         <div class="row">
           <div class="col s12">
+            <h4>
+              <a href="/talks">Talks and Videos about FAI</a>
+            </h4>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col s12">
             <h4>The FAI wiki</h4>
             <ul>
               <li>
@@ -101,13 +109,6 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col s12">
-            <h4>
-              <a href="/talks">Talks about FAI</a>
-            </h4>
-          </div>
-        </div>
 
       </div>
     </main>
