--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container">
         <!-- Orange header bar -->
         <div class="row">
-          <div class="col s12 z-depth-3 center orange" style="margin-top: 23px">
+          <div class="col s12 z-depth-3 center orange" style="margin-top: 10px">
             <h6>
               Motto: Plan your installation, and FAI installs your plan.</h6>
           </div>
@@ -36,7 +36,7 @@
           </div>
           <div class="col s4">
 
-            <a class="waves-effect waves-light btn-large orange valign right black-text" style="font-size: 170%" href="/fai-cd/faicd64-large_6.0.iso">
+            <a class="waves-effect waves-light btn-large orange valign right black-text z-depth-3" style="font-size: 170%" href="/fai-cd/faicd64-large_6.0.iso">
               <i class="material-icons left">download</i>ISO (1.3GB)</a>
           </div>
 
