remove top margin from title, remove shadow from title, adjust sidenav horizontal

--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <div class="navbar-fixed">
-  <nav style='background: url("/images/sprites.png") repeat-x 0 100%;margin: 15px 0 25px;padding: 0 0 8px'>
+  <nav style='background: url("/images/sprites.png") repeat-x 0 100%;margin: 0 0 25px;padding: 0 0 8px;box-shadow: none'>
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center">
 
@@ -22,7 +22,7 @@
   </nav>
 </div>
 
-<ul class="sidenav sidenav-fixed" id="sidenav" style="top: 85px">
+<ul class="sidenav sidenav-fixed" id="sidenav" style="top: 75px">
 
   <li>
     <ul class="collapsible">
