--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -65,7 +65,7 @@
           <p class="col s12">
             All installation images use Debian 11 aka bullseye, FAI 5.10.3, kernel 5.10, amd64 architecture,
             <a href="sha256sums.asc">sha256sum.asc</a>
-            of the ISO's. The can boot from CD/DVD or USB stick with legacy BIOS or UEFI.
+            of the ISO's. They can boot from CD/DVD or USB stick with legacy BIOS or UEFI.
           </p>
 
           <p class="col s12 center">
