new class fai-btn for download buttons, different color for :hover

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -24,7 +24,7 @@
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-large_5.10.3.iso" class="waves-effect waves-light btn orange black-text">
+              <a href="faicd64-large_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
                 <i class="material-icons left">download</i>FAI ISO large (1.2GB)</a>
             </div>
             <p class="col m7 s12">
@@ -34,7 +34,7 @@
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-small_5.10.3.iso" class="waves-effect waves-light btn orange black-text">
+              <a href="faicd64-small_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
                 <i class="material-icons left">download</i>FAI ISO small (674MB)</a>
             </div>
             <p class="col m7 s12">
@@ -44,7 +44,7 @@
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-ubuntu-only_5.10.3.iso" class="waves-effect waves-light btn orange black-text">
+              <a href="faicd64-ubuntu-only_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
                 <i class="material-icons left">download</i>FAI ISO Ubuntu (1.3GB)</a>
             </div>
             <p class="col m7 s12">
@@ -54,7 +54,7 @@
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-autodiscover_5.10.3.iso" class="waves-effect waves-light btn orange black-text">
+              <a href="faicd64-autodiscover_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
                 <i class="material-icons left">download</i>Autodiscover CD (38MB)</a>
             </div>
             <p class="col m7 s12">
