--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           <div class="col s4">
 
-            <a class="waves-effect waves-light btn-large orange valign right black-text z-depth-3" style="font-size: 170%" href="/fai-cd/faicd64-large_6.0.iso">
+            <a class="waves-effect waves-light fai-btn btn-large valign right black-text z-depth-3" style="font-size: 170%" href="/fai-cd/faicd64-large_6.0.iso">
               <i class="material-icons left">download</i>ISO (1.3GB)</a>
           </div>
 
