make text black

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -15,6 +15,18 @@
       .input-field {
 	  margin-top: 0;
       }
+      select {
+          border: 1px solid #000000
+      }
+      select:focus {
+          outline: none
+      }
+      label {
+          color: #000000
+      }
+      .input-field .helper-text {
+          color: #000000
+      }
     </style>
   </head>
 
