--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -147,9 +147,9 @@
 		  <span class="helper-text">
 		    Only http(s) is allowed. Examples:
 		    <br>
-		    http://download.proxmox.com/debian/pve buster pve-no-subscription
+		    http://download.proxmox.com/debian/pve bullseye pve-no-subscription
 		    <br>
-		    https://download.docker.com/linux/debian buster stable
+		    https://download.docker.com/linux/debian bullseye stable
 		  </span>
 		</div>
 	      </div>
