--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -364,8 +364,8 @@
 
 	    <div class="col s12 m6">
 	      <br>
-	      <button class="btn orange" name="sbm" value="0">Create installation image</button>
-	      <button class="btn orange" id="adv2" style="display: none;" name="sbm" value="1">Show API URL</button>
+	      <button class="btn fai-btn" name="sbm" value="0">Create installation image</button>
+	      <button class="btn fai-btn" id="adv2" style="display: none;" name="sbm" value="1">Show API URL</button>
 	    </div>
 
 	  </form>
