--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -292,7 +292,8 @@
 
 	    <div class="col s12 m10">
 	      <div class="col s12">
-		<ul>
+		<ul class="browser-default">
+		  <li>You should change the user and root password after installation</li>
 		  <li>For the keyboard layout we assume Generic 105-key PC</li>
 		  <li>To change the keyboard layout call
 		    <code>dpkg-reconfigure keyboard-configuration</code>
@@ -300,7 +301,6 @@
 		  <li>The timezone will be set to UTC. To change the timezone call
 		    <code>dpkg-reconfigure tzdata</code>
 		  </li>
-		  <li>You should change the user and root password after installation</li>
 		</ul>
 	      </div>
 	    </div>
@@ -354,7 +354,7 @@
 		  </label>
 		  <label>
 		    <input class="with-gap" type="radio" name="cl8" value="" checked="checked"/>
-		    <span>wait to press Return at the end. Default</span>
+		    <span>wait to press Return at the end.</span>
 		  </label>
 
 		</div>
