remove upload icon

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -102,14 +102,8 @@
 		<p class="col s12 m4">
 		  Upload SSH keys for the root account
 		</p>
-		<div class="col s12 m6 file-field input-field">
-		  <div class="btn grey">
-		    <i class="material-icons">folder_open</i>
-		    <input id="rootkey" type="file" accept=".pub" name="rootkey"/>
-		  </div>
-		  <div class="file-path-wrapper">
-		    <input class="file-path validate" type="text">
-		  </div>
+		<div class="col s12 m6 input-field">
+		    <input id="rootkey" type="file" accept=".pub" name="rootkey" style="margin-top: 1rem;"/>
 		  <br>
 		</div>
 	      </div>
