--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -182,12 +182,12 @@
 	      </p>
 	      <div class="col s12 m6">
 		<div class="input-field">
-		  <select class="browser-default" name="suite">
-		    <option value="bullseye">Debian "bullseye" (stable)
+		  <select class="browser-default" name="suite" selected="bullseye">
+		    <option value="buster">Debian 10 buster (oldstable)
 		    </option>
-		    <option value="bookworm">Debian "bookworm" (testing)
+		    <option value="bullseye">Debian 11 bullseye (stable)
 		    </option>
-		    <option value="buster">Debian 10 "buster" (oldstable)
+		    <option value="bookworm">Debian 12 bookworm (testing)
 		    </option>
 		  </select>
 		</div>
