add copyright note

--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@ I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.h
           </div>
         </div>
 
+          <div class="col s12">
+            FAI is free software, distributed under the terms of the GNU GPL,
+            version 2 or any later version.
+          </div>
       </div>
 
     </main>
