--- a/features/index.html
+++ b/features/index.html
@@ -116,7 +116,7 @@
             <li>
               <span class="valign-wrapper">
                 <i class="material-icons">done</i>&nbsp;<span>
-                  <a href="https://oss.gonicus.de/labs/gosa/">GOsa</a></span></span>
+                  <a href="https://github.com/gosa-project">GOsa</a></span></span>
             </li>
           </ul>
         </div>
