--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -40,8 +40,8 @@
 	<div class="row">
 	  <div class="col s12">
 	    <h5>
-	      FAI.me. Build your own ISO or a
-	      <a href="cloud">cloud image</a>
+	      FAI.me. Build your own ISO or
+	      a <a href="cloud">cloud image</a>
 	    </h5>
 	    <div class="divider"></div>
 	    <p>
@@ -88,6 +88,7 @@
 	    </div>
 
 	    <div id="adv" style="display: none;">
+
 	      <div class="col s12 m10">
 		<p class="col s12 m4">
 		  Root password
