--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -1,158 +1,332 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <meta name="Title" content="FAI.me - build you own customized installation image" />
-      <title>FAI.me - build you own customized cloud image</title>
-      <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
-	  <!--[if lte IE 6]>
-	  <link rel="stylesheet" type="text/css" href="/css/ie6_or_less.css" />
-	  <![endif]-->
-<style type="text/css" media="screen">
-input { font-family: initial; margin: 2px 0}
-.checkbox-faime {
- display:inline-block;
- columns: 2;
- }
-</style>
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
+    <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen"/>
+    <link type="text/css" rel="stylesheet" href="/css/local.css" media="screen"/>
+
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+
+    <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8"/>
+    <title>FAI.me - build your own custom ISO</title>
+    <style>
+      .input-field {
+	  margin-top: 0;
+      }
+      select {
+          border: 1px solid #000000
+      }
+      select:focus {
+          outline: none
+      }
+      label {
+          color: #000000
+      }
+      .input-field .helper-text {
+          color: #000000
+      }
+    </style>
   </head>
 
-  <body id="type-b">
-    <div id="wrap">
-      <div id="header">
-	<div id="site-name">
-	  <a href="/">FAI - Fully Automatic Installation</a>
-	</div>
-<!-- removed header-menu-unused.htm -->
-      </div>
+  <body>
+    <header>
+      <!--#include virtual="/header.html" -->
+    </header>
+    <main>
+      <div class="container">
+	<!-- Top text -->
+	<div class="row">
+	  <div class="col s12">
+	    <h5>
+	      FAI.me. Build your own cloud image or
+		an <a href="../">installation image</a>
+	    </h5>
+	    <div class="divider"></div>
+	    <p>
+              This FAI.me image is a bootable disk image that can be
+              used with any virtual machine. It's running a 64bit Debian Linux.
+   	    </p>
 
-<!--#include virtual="/menu.html" -->
-      <div id="content">
-<!-- removed breadcrumb -->
+          </div>
+        </div>
 
-<h1> FAI.me. Build your own cloud image or an <a href="../">installation image</a></h1>
-<p>This FAI.me image is a bootable disk image that can be used
-with any virtual machine. It's running a 64bit Debian Linux.
-
-
-<form action="/cgi/faime.cgi" method="post" enctype="multipart/form-data">
-<input type="hidden"  name="type" value="cloud"/>
+        <div class="row">
+          <form action="/cgi/faime.cgi" method="post" enctype="multipart/form-data">
+            <input type="hidden"  name="type" value="cloud"/>
 
 
-<span style="display: inline-block">
-<label for="disksize">Disk size in Gbytes (<=99): <input size=1 id="disksize"
- name="disksize"  type="text" value="5" maxlength="2" style="margin-right: 20px" required /> </label></span>
-<select name="format" >
+	    <div class="col s12 m10">
+	      <p class="col s12 m4">
+		Disk size in Gbytes (<=99):
+	      </p>
+	      <div class="input-field col s1">
+                <input size=1 id="disksize" name="disksize"  type="text" value="5" maxlength="2" style="margin-right: 20px" required />
+	      </div>
+	    </div>
+
+            <div class="col s12 m10">
+	      <p class="col s12 m4">
+		Disk image format:
+	      </p>
+	      <div class="col s2">
+                <select name="format" >
             <option value="raw.xz" > raw.xz</option>
             <option value="raw.zst" selected="selected"> raw.zst</option>
             <option value="qcow2"> qcow2</option>
             <option value="vdi"> vdi</option>
             <option value="vhdx"> vhdx</option>
             <option value="vmdk"> vmdk</option>
-</select> Disk image format
-<br></br>
-<label for="hostname">  Host  name: &ensp; &ensp;
-<input size=4 id="hostname" name="hostname" type="text" value="debian" required
-/> Host name </label>
+                </select>
+	      </div>
+	    </div>
+
+	    <div class="col s12 m10">
+	      <p class="col s12 m4">
+		Host name:
+	      </p>
+	      <div class="input-field col s12 m6">
+                <input size=4 id="hostname" name="hostname" type="text" value="debian" required />
+	      </div>
+	    </div>
+
+	    <!-- Username Select -->
+	    <div class="col s12 m10">
+	      <p class="col s12 m4">
+		Username (Not the full name)
+	      </p>
+	      <div class="input-field col s12 m6">
+		<input id="user" name="username" type="text" value="debian" required="required"/>
+	      </div>
+
+	    </div>
+
+	    <!-- UserPW Select -->
+	    <div class="col s12 m10">
+	      <p class="col s12 m4">
+		User password
+	      </p>
+	      <div class="input-field col s12 m6">
+		<input id="pwd" name="userpw" type="text"/>
+		<span class="helper-text">If not set, a password will be generated</span>
+	      </div>
+	    </div>
+
+    	      <div class="col s12 m10">
+		<p class="col s12 m4">
+		Root password:
+		</p>
+		<div class="input-field col s12 m6">
+		  <input type="text" id="rootpw" name="rootpw"/>
+		  <span class="helper-text">If not set, sudo will be configured for the user account</span>
+		</div>
+	      </div>
+
+	    </div>
+
+	      <div class="col s12 m10">
+		<p class="col s12 m4">
+		  Upload SSH keys for the root account
+		</p>
+		<div class="col s12 m6 input-field">
+		    <input id="rootkey" type="file" accept=".pub" name="rootkey" style="margin-top: 1rem;"/>
+		  <br>
+		</div>
+	      </div>
+
+	      <div class="col s12 m10">
+		<p class="col s12 m4">
+		  Github username
+		</p>
+		<div class="col s12 m6 input-field">
+		  <input type="text" name="github" id="github"/>
+		  <span class="helper-text">You can also import your SSH keys from Github</span>
+		</div>
+	      </div>
 
 
-<label for="rootpw">Root password: <input size=4 id="rootpw"
- name="rootpw" /> If not set, sudo will be configured for the user account</label>
+	    <!-- Keyboard/Language Select -->
+	    <div class="col s12 m10">
+	      <p class="col s12 m4">
+		Language and keyboard layout
+	      </p>
+	      <div class="input-field col s12 m6">
+		<select class="browser-default" name="keyboard">
+		  <option value="gb">English UK</option>
+		  <option value="us" selected="selected">English US</option>
+                  <option value="fi">Finnish / Suomi</option>
+		  <option value="fr">French / Français</option>
+		  <option value="de">German / Deutsch</option>
+		  <option value="pl">Polish / Polski</option>
+		  <option value="pt">Portuguese / Português</option>
+		  <option value="ru">Russian / Pу́сский</option>
+		  <option value="es">Spanish / Español</option>
+		  <option value="tr">Turkish / Türkçe</option>
+		  <option value="cn">Chinese (Simplified) /中文(简体)</option>
+		  <option value="tw">Chinese (Traditional) / 中文(繁體)</option>
+		  <option value="hi">Hindi / हिन्दी</option>
+		  <option value="ja">Japanese / 日本語</option>
+		</select>
+	      </div>
+	    </div>
 
-<label for="rootkey">Upload SSH keys for the root account: <input size=2 id="rootkey" type="file"
-accept=".pub" name="rootkey" style="margin-right: -50px"/>
+	    <!-- Distribution Select -->
+	    <div class="col s12 m10">
+	      <p class="col s12 m4">
+		Distribution
+	      </p>
+	      <div class="col s12 m6">
+		<div class="input-field">
+		  <select class="browser-default" name="suite" selected="bullseye">
+		    <option value="buster">Debian 10 buster (oldstable)
+		    </option>
+		    <option value="bullseye">Debian 11 bullseye (stable)
+		    </option>
+		    <option value="bookworm">Debian 12 bookworm (testing)
+		    </option>
+		  </select>
+		</div>
+		<label>
+		  <input type="checkbox" class="filled-in" name="cl1" value="BACKPORTS"/>
+		  <span>Enable backports including newer kernel</span>
+		</label>
+	      </div>
+	    </div>
 
-<label for="pwd">Github account:
-<input size=4 name="github" /> You can also import your SSH keys from Github</label>
+	    <!-- Desktop Select -->
+	    <div class="col s12 m10">
+	      <p class="col s12 m4">
+                <br>
+		Which desktop to install
+	      </p>
+              <br>
+	      <div class="col s12 m6 input-field">
+		<select class="browser-default" name="desktop">
+		  <option value="">Plain text console, no X11</option>
+		  <option value="XFCE">XFCE desktop</option>
+		  <option value="LXDE">LXDE desktop</option>
+		  <option value="LXQT">LXQT desktop</option>
+		  <option value="GNOME" selected="selected">GNOME desktop</option>
+		  <option value="KDE">KDE desktop</option>
+		  <option value="MATE">MATE desktop</option>
+		  <option value="CINNAMON">CINNAMON desktop</option>
+		</select>
+	      </div>
+	    </div>
 
-</label>
-</span>
+	    <!-- Additional Software Checkboxes -->
+	    <div class="col s12 m10">
+	      <p class="col s12 m4">
+		Select additional software
+	      </p>
+	      <ul class="col s12 m6">
+		<li>
+		  <label>
+		    <input type="checkbox" class="filled-in" name="cl2" value="DEBIAN_DEVEL"/>
+		    <span>Debian developer tools</span>
+		  </label>
+		</li>
+		<li>
+		  <label>
+		    <input type="checkbox" class="filled-in" name="cl3" value="WEBSERVER"/>
+		    <span>Web server</span>
+		  </label>
+		</li>
+		<li>
+		  <label>
+		    <input type="checkbox" class="filled-in" name="cl4" value="PRINTSERVER"/>
+		    <span>Print server</span>
+		  </label>
+		</li>
+		<li>
+		  <label>
+		    <input type="checkbox" class="filled-in" name="cl5" value="SSH_SERVER" checked="checked"/>
+		    <span>Openssh server</span>
+		  </label>
+		</li>
+		<li>
+		  <label>
+		    <input type="checkbox" class="filled-in" name="cl6" value="STANDARD" checked="checked"/>
+		    <span>Standard system tools</span>
+		  </label>
+		</li>
+		<li>
+		  <label>
+		    <input type="checkbox" class="filled-in" name="cl7" value="NONFREE" checked="checked"/>
+		    <span>Non-free Linux firmware</span>
+		  </label>
+		</li>
+	      </ul>
+	    </div>
 
-<label for="user">  User  name: &ensp; &ensp;
-<input size=4 id="user" name="username" type="text" value="debian" required
-/> Not the full name </label>
+	    <!-- addpkgs -->
+	    <div class="col s12 m10">
+	      <p class="col s12 m4">
+		Add packages to be installed
+	      </p>
+	      <div class="col s12 m6 input-field">
+		<textarea name="addpkgs" class="materialize-textarea"></textarea>
+		<span class="helper-text">Separate with spaces, multiple names on one line are fine</span>
+	      </div>
+	    </div>
 
-<label for="pwd">User password:
-<input size=4 id="pwd" name="userpw" /> If not set, a
-password will be generated </label>
-<br></br>
+	    <!-- Optional Email input -->
+	    <div class="col s12 m10">
+	      <p class="col s12 m4">
+		Email (optional)
+	      </p>
+	      <div class="col s12 m6 input-field">
+		<input id="email" type="email" class="validate" name="email"/>
+		<span class="helper-text" data-error="Invalid input" data-success="You will be informed when the image generation is finished">You will be informed when the image generation is finished</span>
+	      </div>
+	    </div>
 
-<select name="keyboard" >
-            <option value="gb"> English UK</option>
-            <option value="us" selected="selected"> English US</option>
-	    <option value="fi"> Finnish / Suomi</option>
-            <option value="fr"> French / Français</option>
-            <option value="de"> German / Deutsch</option>
-            <option value="pl"> Polish / Polski</option>
-            <option value="pt"> Portuguese / Português</option>
-            <option value="ru"> Russian / Pу́сский</option>
-            <option value="es"> Spanish / Español</option>
-            <option value="tr"> Turkish / Türkçe</option>
-                                                <option value="cn"> Chinese (Simplified) /中文(简体)</option>
-                                                <option value="tw"> Chinese (Traditional) / 中文(繁體)</option>
-                                                <option value="hi"> Hindi / हिन्दी</option>
-                                                <option value="ja"> Japanese / 日本語</option>
-</select> Language and keyboard layout
-<input type=hidden name="partition" value="">
-<br></br>
+	    <div class="col s12 m10">
+	      <div class="col s12">
+		<ul class="browser-default">
+		  <li>You should change the user and root password after installation</li>
+		  <li>For the keyboard layout we assume Generic 105-key PC</li>
+		  <li>To change the keyboard layout call
+		    <code>dpkg-reconfigure keyboard-configuration</code>
+		  </li>
+		  <li>The timezone will be set to UTC. To change the timezone call
+		    <code>dpkg-reconfigure tzdata</code>
+		  </li>
+		</ul>
+	      </div>
+	    </div>
 
-<select name="suite" >
-                  <option value="bullseye">Debian "bullseye" (stable) </option>
-                  <option value="bookworm">Debian "bookworm" (testing) </option>
-                  <option value="buster">Debian 10 "buster" (oldstable) </option>
-      </select> Select a distribution
-&ensp; &ensp;
-<span style="padding:0px !important;">
-<input type="checkbox" name="cl1" value="BACKPORTS" /> Enable
-backports including newer kernel</span>
-<p></p>
-<select name="desktop" >
-                  <option value="" selected="selected" >Plain text console, no X11 </option>
-                  <option value="XFCE">XFCE desktop</option>
-                  <option value="LXDE">LXDE desktop</option>
-                  <option value="LXQT">LXQT desktop</option>
-                  <option value="GNOME">GNOME desktop</option>
-                  <option value="KDE">KDE desktop</option>
-                  <option value="MATE">MATE desktop</option>
-                  <option value="CINNAMON">CINNAMON desktop</option>
-      </select> Which desktop to install
-<p> </p>
 
-<ul class="checkbox-faime" >
-<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl2" value="DEBIAN_DEVEL" /> Debian developer tools</li>
-<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl3" value="WEBSERVER" /> Web server</li>
-<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl4" value="PRINTSERVER" /> Print server</li>
-<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl5" value="SSH_SERVER" checked /> Openssh server</li>
-<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl6" value="STANDARD" checked /> Standard system tools</li>
-<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl7" value="NONFREE" checked /> Non-free Linux firmware</li>
-</ul>
-<br>
-<p style="margin: 0 0 0.2em;">Additional packages to be installed:</p>
-<textarea rows="2" cols="30" name="addpkgs"></textarea> Separate with
-spaces, multiple names on one line are fine
 
-<br></br>      <label for="email">Email (optional):
-      <input size=14 id="email" name="email" /> You will be informed when the image generation is finished </label>
-<ul>
-<li>For the keyboard layout we assume Generic 105-key PC</li>
-<li>To change the keyboard layout call <tt>dpkg-reconfigure
-keyboard-configuration</tt></li>
-<li>The timezone will be set to UTC. To change the timezone call <tt>dpkg-reconfigure tzdata</tt></li>
-<li>You should change the user and root password after installation</li>
-</ul>
 
-      <button name="submit_bttn" value="check">Create disk image</button>
-</form>
-Start this disk image with: <tt>kvm -m 500 -hda imagename</tt>
-<p>
-Any feedback is welcome. Send an email to FAI.me =at= fai-project.org
 
-      </div>
-    </div>
-  <div id="footer"></div>
-  </div>
+            <div class="col s12 m6">
+	      <br>
+	        <button class="btn fai-btn" name="submit_bttn" value="check">Create disk image</button>
+	      </div>
+            </form>
+
+
+            <div class="row">
+	  <div class="col s12">
+            <p>
+            Start this disk image with: <tt> kvm -m 2G -hda imagename</tt>
+            <p>
+	    <b>Any feedback is welcome. Send an email to FAI.me =at= fai-project.org</b>
+	  </div>
+	</div>
+
+
+    </main>
+
+    <footer class="page-footer white">
+      <!--#include virtual="/footer.html" -->
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="/js/materialize.js"></script>
+    <script>
+      M.AutoInit();
+    </script>
   </body>
 </html>
