one /div too much

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -115,15 +115,13 @@
 
     	      <div class="col s12 m10">
 		<p class="col s12 m4">
-		Root password:
+		Root password
 		</p>
 		<div class="input-field col s12 m6">
 		  <input type="text" id="rootpw" name="rootpw"/>
 		  <span class="helper-text">If not set, sudo will be configured for the user account</span>
 		</div>
 	      </div>
-
-	    </div>
 
 	      <div class="col s12 m10">
 		<p class="col s12 m4">
