add browser-default class

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -71,7 +71,7 @@
 		Disk image format:
 	      </p>
 	      <div class="col s2">
-                <select name="format" >
+                <select class="browser-default" name="format" >
             <option value="raw.xz" > raw.xz</option>
             <option value="raw.zst" selected="selected"> raw.zst</option>
             <option value="qcow2"> qcow2</option>
