--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -30,10 +30,10 @@
 	      </p>
 	      <div class="col s12 m6">
 		<div class="input-field">
-		  <select class="browser-default" name="suite" selected="bullseye">
+		  <select class="browser-default" name="suite">
 		    <option value="buster">Debian 10 buster (oldstable)
 		    </option>
-		    <option value="bullseye">Debian 11 bullseye (stable)
+		    <option value="bullseye" selected="selected">Debian 11 bullseye (stable)
 		    </option>
 		    <option value="bookworm">Debian 12 bookworm (testing)
 		    </option>
