put hints into an include file

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -97,6 +97,8 @@
 
             <!--#include virtual="../key-distr-desk-pkgs.html" -->
 
+            <!--#include virtual="../hints.html" -->
+
             <div class="col s12 m6">
 	      <br>
 	        <button class="btn fai-btn" name="submit_bttn" value="check">Create disk image</button>
