--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -164,6 +164,8 @@
 
 	    </div>
 
+            <!--#include virtual="hints.html" -->
+
 	    <div class="col s12 m8">
 	      <br>
 	      <button class="btn fai-btn" name="sbm" value="0">Create installation image</button>
