add missing class

--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -120,7 +120,7 @@
                 <img class="responsive-img" alt="FAI installation" src="/pics/installation/105.png"/>
               </div>
               <div class="carousel-item" href="#six!">
-                <img class="" alt="FAI installation" src="/pics/installation/106.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/106.png"/>
               </div>
               <div class="carousel-item" href="#seven!">
                 <img class="responsive-img" alt="FAI installation" src="/pics/installation/107.png"/>
