remove ps.gz, use hhtps

--- a/guide/index.html
+++ b/guide/index.html
@@ -33,7 +33,6 @@
                 &bullet; FAI Guide
                 <a href="/fai-guide.text">ASCII</a>,
                 <a href="/fai-guide.pdf">PDF</a>,
-                <a href="/fai-guide.ps.gz">Postscript</a>,
                 <a href="/fai-guide/">HTML</a>
               </li>
               <li>
@@ -49,7 +48,7 @@
               </li>
               <li>
                 &bullet; List of
-                <a href="http://wiki.fai-project.org/index.php/Variables">important variables</a>
+                <a href="https://wiki.fai-project.org/index.php/Variables">important variables</a>
                 inside FAI</li>
             </ul>
           </div>
