--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -70,7 +70,7 @@
 	      <p class="col s12 m4">
 		Disk image format:
 	      </p>
-	      <div class="col s2">
+	      <div class="col s5 m3">
                 <select class="browser-default" name="format" >
             <option value="raw.xz" > raw.xz</option>
             <option value="raw.zst" selected="selected"> raw.zst</option>
