fix syntax error

--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
       <a href="/" class="brand-logo center">
 
         <div class="hide-on-med-and-up show-on-small">FAI</div>
-        <div class="hide-on-small-only show-on-medium-and-up" style="width: 530px";">FAI - Fully Automatic Installation</div>
+        <div class="hide-on-small-only show-on-medium-and-up" style="width: 530px">FAI - Fully Automatic Installation</div>
       </a>
       <a href="#" data-target="sidenav" class="sidenav-trigger">
         <i class="material-icons">menu</i>
