--- a/screenshots/installation.html
+++ b/screenshots/installation.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen">
 
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8"/>
