remove trailing slash on void elements

--- a/screenshots/installation.html
+++ b/screenshots/installation.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>FAI - Fully Automatic Installation</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
