--- a/guide/index.html
+++ b/guide/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>FAI - Fully Automatic Installation</title>
     <style>
 			.input-field {
