--- a/reports/index.html
+++ b/reports/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>FAI - Fully Automatic Installation</title>
     <style type="text/css">
     hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:both}
