remove stray </a> tag

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
-<li>[Feb 09, 2023] The FAIme build service now supports Debian 12 aka bookworm using FAI 6.0</a></li>
+<li>[Feb 09, 2023] The FAIme build service now supports Debian 12 aka bookworm using FAI 6.0</li>
 <li>[Jan 15, 2023] <a href="https://fai-project.org/fai-cd/index2.html">The new ISO
   images using FAI 6.0</a></li>
-<li>[Jan 13, 2023] FAI 6.0 released</a></li>
-<li>[Jan 21, 2021] FAIme now adds non-free firmware needed for wireless cards</a></li>
+<li>[Jan 13, 2023] FAI 6.0 released</li>
+<li>[Jan 21, 2021] FAIme now adds non-free firmware needed for wireless cards</li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
 </li>
