--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -81,7 +81,7 @@
             <h4>The fai-monitor GUI</h4>
             <p>The FAI monitor daemon (fai-monitor) receives small messages from each install client (<a href="/logs/fai-monitor.log">sample log file of fai-monitor</a>), which describes what each client is doing at the moment. The GUI creates a nice table and is showing all actions in real time for all clients.</p>
 
-            <a href="fai-monitor.gif"><img alt="An example of the fai-monitor-gui" src="faimond.png" width="600" border="0"/></a>
+            <a href="fai-monitor.gif"><img alt="An example of the fai-monitor-gui" src="faimond.png" width="600" border="0"></a>
             <p>(Click on screenshot for animated gif)</p>
           </div>
         </div>
@@ -105,52 +105,52 @@
                 </div>
               </div>
               <div class="carousel-item" href="#one!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/101.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/101.png">
               </div>
               <div class="carousel-item" href="#two!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/102.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/102.png">
               </div>
               <div class="carousel-item" href="#three!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/103.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/103.png">
               </div>
               <div class="carousel-item" href="#four!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/104.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/104.png">
               </div>
               <div class="carousel-item" href="#five!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/105.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/105.png">
               </div>
               <div class="carousel-item" href="#six!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/106.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/106.png">
               </div>
               <div class="carousel-item" href="#seven!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/107.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/107.png">
               </div>
               <div class="carousel-item" href="#eight!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/108.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/108.png">
               </div>
               <div class="carousel-item" href="#nine!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/109.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/109.png">
               </div>
               <div class="carousel-item" href="#ten!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/110.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/110.png">
               </div>
               <div class="carousel-item" href="#eleven!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/111.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/111.png">
               </div>
               <div class="carousel-item" href="#twelve!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/112.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/112.png">
               </div>
               <div class="carousel-item" href="#thirteen!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/113.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/113.png">
               </div>
               <div class="carousel-item" href="#fourteen!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/114.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/114.png">
               </div>
               <div class="carousel-item" href="#fiveteen!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/115.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/115.png">
               </div>
               <div class="carousel-item" href="#sixteen!">
-                <img class="responsive-img" alt="FAI installation" src="/pics/installation/116.png"/>
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/116.png">
               </div>
             </div>
           </div>
@@ -174,22 +174,22 @@
                 </div>
               </div>
               <div class="carousel-item" href="#one!">
-                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai1.png"/>
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai1.png">
               </div>
               <div class="carousel-item" href="#two!">
-                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai2.png"/>
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai2.png">
               </div>
               <div class="carousel-item" href="#three!">
-                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai3.png"/>
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai3.png">
               </div>
               <div class="carousel-item" href="#four!">
-                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai4.png"/>
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai4.png">
               </div>
               <div class="carousel-item" href="#five!">
-                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai5.png"/>
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai5.png">
               </div>
               <div class="carousel-item" href="#ten!">
-                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai10.png"/>
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai10.png">
               </div>
             </div>
           </div>
@@ -199,18 +199,18 @@
         <div class="row">
           <div class="col s12">
             <h4>The new autodiscover function of FAI 5.0</h4>
-            <img alt="FAI autodiscover" src="fai1.png" width="600"/>
-            <img alt="FAI autodiscover" src="fai2.png" width="600"/>
-            <img alt="FAI autodiscover" src="fai3.png" width="600"/>
-            <img alt="FAI autodiscover" src="fai4.png" width="600"/>
-            <img alt="FAI autodiscover" src="fai5.png" width="600"/>
-            <img alt="FAI autodiscover" src="fai10.png" width="600"/>
+            <img alt="FAI autodiscover" src="fai1.png" width="600">
+            <img alt="FAI autodiscover" src="fai2.png" width="600">
+            <img alt="FAI autodiscover" src="fai3.png" width="600">
+            <img alt="FAI autodiscover" src="fai4.png" width="600">
+            <img alt="FAI autodiscover" src="fai5.png" width="600">
+            <img alt="FAI autodiscover" src="fai10.png" width="600">
           </div>
         </div>
         <div class="row">
           <div class="col s12">
             <h4>A slideshow of an installation via CD</h4>
-            <a href="/slideshow/"><img alt="slideshow overview" src="slideshow-overview.png" border="0"/></a>
+            <a href="/slideshow/"><img alt="slideshow overview" src="slideshow-overview.png" border="0"></a>
           </div>
         </div>
 -->
