--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -86,7 +86,7 @@
           </div>
         </div>
 
-        <a name="cd-slide"></a>
+        <a id="cd-slide"></a>
         <div class="row">
           <div class="col s10">
             <h4>A slideshow of an installation via CD</h4>
