--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -54,7 +54,7 @@
 
         <div class="row">
           <form action="/cgi/faime.cgi" method="post" enctype="multipart/form-data">
-            <input type="hidden"  name="type" value="cloud"/>
+            <input type="hidden"  name="type" value="cloud">
 
 
 	    <div class="col s12 m10">
@@ -62,7 +62,7 @@
 		Disk size in Gbytes (<=99):
 	      </p>
 	      <div class="input-field col s1">
-                <input size=1 id="disksize" name="disksize"  type="text" value="5" maxlength="2" style="margin-right: 20px" required />
+                <input size=1 id="disksize" name="disksize"  type="text" value="5" maxlength="2" style="margin-right: 20px" required >
 	      </div>
 	    </div>
 
@@ -87,7 +87,7 @@
 		Host name:
 	      </p>
 	      <div class="input-field col s12 m6">
-                <input size=4 id="hostname" name="hostname" type="text" value="debian" required />
+                <input size=4 id="hostname" name="hostname" type="text" value="debian" required >
 	      </div>
 	    </div>
 
