--- a/FAIme/root.html
+++ b/FAIme/root.html
@@ -3,7 +3,7 @@
 		  Root password
 		</p>
 		<div class="input-field col s12 m6">
-		  <input type="text" id="rootpw" name="rootpw"/>
+		  <input type="text" id="rootpw" name="rootpw">
 		  <span class="helper-text">If not set, sudo will be configured for the user account</span>
 		</div>
 	      </div>
@@ -13,7 +13,7 @@
 		  Upload SSH keys for the root account
 		</p>
 		<div class="col s12 m6 input-field">
-		    <input id="rootkey" type="file" accept=".pub" name="rootkey" style="margin-top: 1rem;"/>
+		    <input id="rootkey" type="file" accept=".pub" name="rootkey" style="margin-top: 1rem;">
 		  <br>
 		</div>
 	      </div>
@@ -23,7 +23,7 @@
 		  Github username
 		</p>
 		<div class="col s12 m6 input-field">
-		  <input type="text" name="github" id="github"/>
+		  <input type="text" name="github" id="github">
 		  <span class="helper-text">You can also import your SSH keys from Github</span>
 		</div>
 	      </div>
