--- a/FAIme/user_name_pw.html
+++ b/FAIme/user_name_pw.html
@@ -4,7 +4,7 @@
 		Username (Not the full name)
 	      </p>
 	      <div class="input-field col s12 m6">
-		<input id="user" name="username" type="text" value="debian" required="required"/>
+		<input id="user" name="username" type="text" value="debian" required="required">
 	      </div>
 
 	    </div>
@@ -15,7 +15,7 @@
 		User password
 	      </p>
 	      <div class="input-field col s12 m6">
-		<input id="pwd" name="userpw" type="text"/>
+		<input id="pwd" name="userpw" type="text">
 		<span class="helper-text">If not set, a password will be generated</span>
 	      </div>
 	    </div>
