--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -40,7 +40,7 @@
 		  </select>
 		</div>
 		<label>
-		  <input type="checkbox" class="filled-in" name="cl1" value="BACKPORTS"/>
+		  <input type="checkbox" class="filled-in" name="cl1" value="BACKPORTS">
 		  <span>Enable backports including newer kernel</span>
 		</label>
 	      </div>
@@ -75,37 +75,37 @@
 	      <ul class="col s12 m6">
 		<li>
 		  <label>
-		    <input type="checkbox" class="filled-in" name="cl2" value="DEBIAN_DEVEL"/>
+		    <input type="checkbox" class="filled-in" name="cl2" value="DEBIAN_DEVEL">
 		    <span>Debian developer tools</span>
 		  </label>
 		</li>
 		<li>
 		  <label>
-		    <input type="checkbox" class="filled-in" name="cl3" value="WEBSERVER"/>
+		    <input type="checkbox" class="filled-in" name="cl3" value="WEBSERVER">
 		    <span>Web server</span>
 		  </label>
 		</li>
 		<li>
 		  <label>
-		    <input type="checkbox" class="filled-in" name="cl4" value="PRINTSERVER"/>
+		    <input type="checkbox" class="filled-in" name="cl4" value="PRINTSERVER">
 		    <span>Print server</span>
 		  </label>
 		</li>
 		<li>
 		  <label>
-		    <input type="checkbox" class="filled-in" name="cl5" value="SSH_SERVER" checked="checked"/>
+		    <input type="checkbox" class="filled-in" name="cl5" value="SSH_SERVER" checked="checked">
 		    <span>Openssh server</span>
 		  </label>
 		</li>
 		<li>
 		  <label>
-		    <input type="checkbox" class="filled-in" name="cl6" value="STANDARD" checked="checked"/>
+		    <input type="checkbox" class="filled-in" name="cl6" value="STANDARD" checked="checked">
 		    <span>Standard system tools</span>
 		  </label>
 		</li>
 		<li>
 		  <label>
-		    <input type="checkbox" class="filled-in" name="cl7" value="NONFREE" checked="checked"/>
+		    <input type="checkbox" class="filled-in" name="cl7" value="NONFREE" checked="checked">
 		    <span>Non-free Linux firmware</span>
 		  </label>
 		</li>
@@ -129,7 +129,7 @@
 		Email (optional)
 	      </p>
 	      <div class="col s12 m6 input-field">
-		<input id="email" type="email" class="validate" name="email"/>
+		<input id="email" type="email" class="validate" name="email">
 		<span class="helper-text" data-error="Invalid input" data-success="You will be informed when the image generation is finished">You will be informed when the image generation is finished</span>
 	      </div>
 	    </div>
