--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
   <head>
-    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
-    <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen"/>
-    <link type="text/css" rel="stylesheet" href="/css/local.css" media="screen"/>
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen">
+    <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen">
+    <link type="text/css" rel="stylesheet" href="/css/local.css" media="screen">
 
-    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>FAI - Fully Automatic Installation</title>
   </head>
 
