move <tt> to <code>

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -124,7 +124,7 @@ dd if=faicd64-large_5.10.3.iso of=/dev/sdx
               <li>
                 <span class="valign-wrapper">
                   <i class="material-icons">done</i>&nbsp;<span>All log files from the installation can be found in
-                    <tt>/var/log/fai/localhost/last/</tt></span></span>
+                    <code>/var/log/fai/localhost/last/</code></span></span>
               </li>
 
               <li>
