--- a/team/index.html
+++ b/team/index.html
@@ -25,12 +25,12 @@
 
 
 
-<a name="contact"></a>
+<a id="contact"></a>
 <h4>FAI Team Contact</h4>
 
 <p>Mail to the team: fai =at) fai-project.org</p>
 
-<a name="team"></a>
+<a id="team"></a>
 <h4>The Team</h4>
 
 <table>
