--- a/team/index.html
+++ b/team/index.html
@@ -36,8 +36,8 @@
 <table>
 
 <tr>
-     <td><img src="/team/mrfai.jpg" style="float: left; margin: 1em 1em 1em 1em;" alt="" />
-     <td><strong><a href="https://cs.uni-koeln.de/ls-juenger/people/lange">Thomas Lange</a></strong><br />lange _a_t fai-project.org<br />Mrfai on #fai<br />project leader</td>
+     <td><img src="/team/mrfai.jpg" style="float: left; margin: 1em 1em 1em 1em;" alt="" >
+     <td><strong><a href="https://cs.uni-koeln.de/ls-juenger/people/lange">Thomas Lange</a></strong><br>lange _a_t fai-project.org<br>Mrfai on #fai<br>project leader</td>
 </tr>
 
 </table>
