--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -24,7 +24,7 @@
           <div class="col s12">
 
 
-<a name=description></a>
+<a id=description></a>
 <h3>Roadmap for FAI</h3>
 These are topics that are important for the next FAI release.
 If you have any suggestions or like to work on a topic, please get in
