--- a/mailinglist/index.html
+++ b/mailinglist/index.html
@@ -40,29 +40,29 @@
                 Search linux-fai:
               </p>
               <div class="input-field col s5 m5 l4">
-                <input type="text" name="q"/>
-                <input type="hidden" name="sitesearch" value="https://lists.uni-koeln.de/pipermail/linux-fai/"/>
+                <input type="text" name="q">
+                <input type="hidden" name="sitesearch" value="https://lists.uni-koeln.de/pipermail/linux-fai/">
               </div>
               <div class="col s2 m2">
-                <input type="submit" class="btn orange" value="Go"/>
+                <input type="submit" class="btn orange" value="Go">
               </div>
             </div>
           </form>
 
           <a href="https://lists.uni-koeln.de/mailman/listinfo/linux-fai-devel/">linux-fai-devel</a>
           is the developer mailling list (<a href="https://lists.uni-koeln.de/pipermail/linux-fai-devel/">main archive</a>,
-          <a href="https://www.mail-archive.com/linux-fai-devel%40uni-koeln.de"/>searchable archive</a>)
+          <a href="https://www.mail-archive.com/linux-fai-devel%40uni-koeln.de">searchable archive</a>)
         <form method="get" action="https://google.com/search">
           <div class="col s12 m12">
             <p class="col s4 m3 l2">
               Search linux-fai-devel:
             </p>
             <div class="input-field col s5 m5 l4">
-              <input type="text" name="q"/>
-              <input type="hidden" name="sitesearch" value="https://lists.uni-koeln.de/pipermail/linux-fai-devel/"/>
+              <input type="text" name="q">
+              <input type="hidden" name="sitesearch" value="https://lists.uni-koeln.de/pipermail/linux-fai-devel/">
             </div>
             <div class="col s2 m2">
-              <input type="submit" class="btn orange" value="Go"/>
+              <input type="submit" class="btn orange" value="Go">
             </div>
           </div>
         </form>
