fix syntax error

--- a/reports/index.html
+++ b/reports/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <title>FAI - Fully Automatic Installation</title>
-    <style type="text/css">
+    <style>
     hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:both}
     </style>
   </head>
