--- a/poster/index.html
+++ b/poster/index.html
@@ -25,14 +25,14 @@
           <div class="col s12 m6">
             <a href="/poster/flyer-de.pdf">
               <figure>
-                <img alt="flyer german" src="flyer-de-thumb.png" border="0">
+                <img alt="flyer german" src="flyer-de-thumb.png">
                 <figcaption>FAI flyer, german version</figcaption>
               </figure>
             </a>
 
             <a href="/poster/flyer-en.pdf">
               <figure>
-                <img alt="flyer english" src="flyer-en-thumb.png" border="0">
+                <img alt="flyer english" src="flyer-en-thumb.png">
                 <figcaption>FAI flyer, english version</figcaption>
               </figure>
             </a>
