--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -81,7 +81,7 @@
             <h4>The fai-monitor GUI</h4>
             <p>The FAI monitor daemon (fai-monitor) receives small messages from each install client (<a href="/logs/fai-monitor.log">sample log file of fai-monitor</a>), which describes what each client is doing at the moment. The GUI creates a nice table and is showing all actions in real time for all clients.</p>
 
-            <a href="fai-monitor.gif"><img alt="An example of the fai-monitor-gui" src="faimond.png" width="600" border="0"></a>
+            <a href="fai-monitor.gif"><img alt="An example of the fai-monitor-gui" src="faimond.png" width="600"></a>
             <p>(Click on screenshot for animated gif)</p>
           </div>
         </div>
@@ -210,7 +210,7 @@
         <div class="row">
           <div class="col s12">
             <h4>A slideshow of an installation via CD</h4>
-            <a href="/slideshow/"><img alt="slideshow overview" src="slideshow-overview.png" border="0"></a>
+            <a href="/slideshow/"><img alt="slideshow overview" src="slideshow-overview.png"></a>
           </div>
         </div>
 -->
