--- a/guide/index.html
+++ b/guide/index.html
@@ -40,9 +40,9 @@
                 &bullet; Search in the FAI guide:
                 <form method="get" action="https://google.com/search">
                   <p class="input-field inline">
-                    <input type="text" name="q" size="30" maxlength="255" value=""/>
-                    <input type="hidden" name="as_q" value="site:fai-project.org/fai-guide/"/>
-                    <input type="submit" name="btnG" value="Search" class="btn grey"/>
+                    <input type="text" name="q" size="30" maxlength="255" value="">
+                    <input type="hidden" name="as_q" value="site:fai-project.org/fai-guide/">
+                    <input type="submit" name="btnG" value="Search" class="btn grey">
                   </p>
                 </form>
               </li>
@@ -63,13 +63,13 @@
                 <a href="../doc/man/">All man pages</a>
               </li>
               <li>
-                <a id="search"></a>
+                <a id="search2"></a>
                 &bullet; Search the man pages:
                 <form method="get" action="https://google.com/search">
                   <p class="input-field inline">
-                    <input type="text" name="q" size="30" maxlength="255" value=""/>
-                    <input type="hidden" name="as_q" value="site:fai-project.org/doc/man/"/>
-                    <input type="submit" name="btnG" value="Search" class="btn grey"/>
+                    <input type="text" name="q" size="30" maxlength="255" value="">
+                    <input type="hidden" name="as_q" value="site:fai-project.org/doc/man/">
+                    <input type="submit" name="btnG" value="Search" class="btn grey">
                   </p>
                 </form>
               </li>
