fix html errors

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -118,7 +118,7 @@ swedish installation using FAI, <a href="https://www.youtube.com/watch?v=W1tT60E
 
 
 <li> <a href="http://neeleshgurjar.co.in/techidnyan/bare-metal-provisioning-of-linux-proxmox-using-fai/">Bare Metal Provisioning of Linux (Proxmox) using FAI</a>,
-<a href="https://pve.proxmox.com/wiki/Unattended_installation_of_Proxmox">wiki entry<a/>
+<a href="https://pve.proxmox.com/wiki/Unattended_installation_of_Proxmox">wiki entry</a>
  (2015)
 
 <li> <a href="http://syslinux.fr/fai-debian/">Description of a
@@ -259,7 +259,7 @@ with Ubuntu</a> (Sep 2014)
 
 <li> <a href="http://www.lug-erding.de/vortrag/FAI.pdf">Talk</a> at LUG Erding (3/2011)
 
-<li> <a hfref="http://www.wh-netz.de/knowledgebase/FaI">A Ubuntu description</a> (2010)
+<li> <a href="http://www.wh-netz.de/knowledgebase/FaI">A Ubuntu description</a> (2010)
 
 <li> <a href="/doc/10-jahre-fai.pdf">A detailed article</a> about the 10th
 anniversary of the project. Also includes a desription how FAI works.</li>
