--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -59,7 +59,7 @@
 
 	    <div class="col s12 m10">
 	      <p class="col s12 m4">
-		Disk size in Gbytes (<=99):
+		Disk size in Gbytes (&le;99):
 	      </p>
 	      <div class="input-field col s1">
                 <input size=1 id="disksize" name="disksize"  type="text" value="5" maxlength="2" style="margin-right: 20px" required >
@@ -105,17 +105,18 @@
 	      </div>
             </form>
 
+        </div>
 
-            <div class="row">
+        <div class="row">
 	  <div class="col s12">
             <p>
-            Start this disk image with: <tt> kvm -m 2G -hda imagename</tt>
+            Start this disk image with: <code> kvm -m 2G -hda imagename</code>
             <p>
 	    <b>Any feedback is welcome. Send an email to FAI.me =at= fai-project.org</b>
 	  </div>
 	</div>
 
-
+	</div>
     </main>
 
     <footer class="page-footer white">
